trunk/Archive2/6b/aa7934a576de8c/output
main.cpp:7:18: error: invalid application of 'sizeof' to a function type
    std::cout << sizeof(gg());
                 ^     ~~~~~~
1 error generated.
